--- a/application.properties
+++ b/application.properties
@@ -3,5 +3,5 @@
 app.grails.version=2.4.4
 app.name=smarthome-application
 app.version=6.16
-app.code=BeMyHomeSmart
+app.code=ConsoHerozh
 aui.version=7.3.0
